hphp/test/slow/reified-generics/covariant-generic.php.expectf
Fatal error: Reified generics cannot be covariant or contravariant in %s on line 3
